run code formatter